@@ -376,7 +376,8 @@ wc_locale_to_ces(char *locale)
 #ifdef HAVE_LANGINFO_CODESET
     {
 	char *cs = nl_langinfo(CODESET);
-	return wc_charset_to_ces(cs);
+	if (cs && strcmp(cs, "US-ASCII"))
+	    return wc_charset_to_ces(cs);
     }
 #endif
     for (n = 0; *p && *p != '.' && n < 5; p++) {
